<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">电院新闻</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
     <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
     <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_header_refresh_time">更新</string>
    <string name="xlistview_footer_hint_normal">上拉查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="back_exit_tips">再按一次退出电院新闻</string>
    
    <string name="new_data_toast_none">当前内容已是最新</string>
    <string name="new_data_toast_message">有 %d 条更新</string>
    <string name="share">分享到</string>
    
    <string name="msg_read_detail_fail">无法获取文章信息</string>
    
    <string name="last_news">最新资讯</string>
    <string name="notice_news">新闻通知</string>
    <string name="undergraduate_news">本科教学</string>
    <string name="postgraduate_news">研究生教学</string>
    <string name="research_news">科研信息</string>
    <string name="academic_news">学术交流</string>
    <string name="net_news">网络中心</string>
    <string name="menu_collect">我的收藏</string>
    <string name="menu_setting">设置</string>
    
	<string name="errcode_success">分享成功</string>
	<string name="errcode_cancel">分享取消</string>
	<string name="errcode_deny">分享被拒绝</string>
	<string name="errcode_unknown">分享返回</string>
   	<string name="Weixin_Share_Success">微信分享成功</string>
	<string name="Weixin_Share_Error">微信分享失败</string>
	
	   	<string name="collect_success">添加到我的收藏</string>
	<string name="collect_cancel">取消收藏</string>
	<string name="empty_message">木有您的收藏记录</string>
	<string name="collect_message">点击红心赶紧收藏吧</string>
	<string name="empty_button">Try again</string>

</resources>